--- a/nginx.conf
+++ b/nginx.conf
@@ -1,11 +1,29 @@
+worker_processes 1;
+events { worker_connections 1024; }
+
 http {
-   ...
+    include       mime.types;
+    default_type  application/octet-stream;
+
+    sendfile        on;
+    keepalive_timeout  65;
+
     server {
-       ...
+        listen       $PORT;
+        server_name  localhost;
+
+        location / {
+            proxy_pass http://localhost:5000;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
         location /nginx_status {
             stub_status on;
-            allow 127.0.0.1;
-            deny all;
+            access_log   off;
+            allow all;
         }
     }
 }
