--- a/nginx.conf
+++ b/nginx.conf
@@ -1,4 +1,5 @@
 worker_processes 1;
+
 events { worker_connections 1024; }
 
 http {
@@ -13,7 +14,7 @@ http {
         server_name  localhost;
 
         location / {
-            proxy_pass http://localhost:5000;
+            proxy_pass http://127.0.0.1:8080;  # Chuyển tiếp yêu cầu đến ứng dụng PHP-FPM
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -23,7 +24,7 @@ http {
         location /nginx_status {
             stub_status on;
             access_log   off;
-            allow all;
+            allow all;  # Cho phép truy cập từ tất cả các địa chỉ IP
         }
     }
 }
